+ dhcpv6 server; rewrite dhcpv4 server; changed API
